# sboxdb

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
cckv/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Justfile  README.md
cckv/include/cckv/: cckv.h  slice.h  status.h
cckv/src/: status.cc  status_test.cc
cckv/src/internal/: codec.cc  codec.h  codec_test.cc  filesystem.h  fsposix.cc  fsposix.h  fsposix_test.cc  memory.cc  memory.h  memory_test.cc  memtable.cc  memtable.h  memtable_test.cc  storage.cc  storage.h
cluster/: run.sh
cluster/sboxdb1/: sboxdb.yaml
cluster/sboxdb2/: sboxdb.yaml
cluster/sboxdb3/: sboxdb.yaml
cluster/sboxdb4/: sboxdb.yaml
cluster/sboxdb5/: sboxdb.yaml
config/: sboxdb.yaml
derive/: Cargo.toml  LICENSE.TXT  README.md
derive/src/: lib.rs
docs/: arch.md  references.md  sql.md
src/: client.rs  codec.rs  config.rs  error.rs  lib.rs  raft.rs  server.rs  session.rs  storage.rs
src/access/: engine.rs  expression.rs  kv.rs  mod.rs  predicate.rs  raft.rs  value.rs
src/catalog/: catalog.rs  column.rs  index.rs  mod.rs  schema.rs  table.rs  type.rs
src/codec/: keycodec.rs
src/concurrency/: mod.rs
src/concurrency/mvcc/: mod.rs  tests.rs  tests_helper.rs
src/concurrency/mvcc/golden/: anomaly_dirty_read  anomaly_dirty_write  anomaly_fuzzy_read  anomaly_lost_update  anomaly_phantom_read  anomaly_read_skew  anomaly_write_skew  begin  begin_as_of  begin_read_only  delete  rollback  scan_key_version_encoding  scan_prefix  set  set_conflict  unversioned
src/raft/: log.rs  message.rs  mod.rs  node.rs  persister.rs  server.rs  transport.rs
src/raft/node/: candidate.rs  follower.rs  leader.rs  mod.rs
src/slt/: mod.rs  parser.rs
src/slt/script/: 001-intro.slt  002-basic.slt  003-groupby.slt  004-join.slt  README.md
src/sql/: format.rs  mod.rs  sql.md
src/sql/execution/: aggregate.rs  compiler.rs  context.rs  ddl.rs  display.rs  dml.rs  expr.rs  mod.rs  query.rs  show.rs
src/sql/execution/golden/: alias  explain  join  limit  query_filer_simple  query_filter_conj_or  query_filter_const  simple_agg  simple_agg_with_groupby  simple_query  sort
src/sql/parser/: ast.rs  display_utils.rs  lexer.rs  mod.rs  visitor.rs
src/sql/parser/golden/lexer/: alter_table  create_index  create_table  drop_index  drop_table
src/sql/parser/golden/parser/: alter_table  create_index  create_table  delete  drop_index  drop_table  insert_with_select  insert_with_values  multi_stmts  query_inner_join  query_left_join_with_agg  update
src/sql/plan/: expr.rs  mod.rs  plan.rs  planner.rs  schema.rs  visitor.rs
src/sql/plan/golden/: delete  insert_with_select  insert_with_values  query_with_agg  query_with_alias_join  query_with_groupby_limit_offset  query_with_join  update
src/sql/udf/: aggregate.rs  mod.rs  scalar.rs  signature.rs
src/storage/: buffer.rs  codec.rs  engine.rs  kv.rs  memory.rs  mod.rs  page.rs  state.rs
src/storage/buffer/: bufferpool.rs  replacer.rs
src/storage/codec/: bincodec.rs  keycodec.rs
src/storage/engine/: memory.rs
src/storage/heap/: README.md  bufferpool.rs  mod.rs  page.rs  replacer.rs
src/storage/kv/: memory.rs  mod.rs
src/storage/kv/codec/: bincodec.rs  keycodec.rs
src/storage/mvcc/: mod.rs
src/storage/mvcc/tests/: mod.rs  tests.rs
src/storage/mvcc/tests/golden/: begin_as_of  delete_conflict  get  get_isolation  scan  scan_isolation
src/tpcc/: mod.rs  tables.sql
tests/: tests.rs
tests/raft/: cluster.rs  mod.rs  state.rs  tests.rs  transport.rs
tools/sltgen/: README.md  generator.py  justfile  main.py  pyproject.toml
tools/sltgen/templates/: __init__.py
tools/sltgen/templates/templates/: prompt_gen_slt_system.j2  prompt_gen_slt_user.j2
tools/sltgen/tests/: test_generator.py
wasm/: Cargo.toml  justfile
wasm/src/: wasm.rs
wasm/web/: index.html  repl.js
