[package]
name = "sboxdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
bincode = "^1.3.3"
rand = "0.8.5"
paste = "1.0.14"
config = "0.14.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
async-trait = "0.1.80"
futures = "0.3"
log = "0.4.21"
env_logger = "0.11.3"
uuid = {version = "1.8.0", features = ["v4"]}
goldenfile = "1.8.0"
hex = "0.4.3"
regex = "1.10.4"

[dev-dependencies]
tempfile = "3.19.1"
