[package]
name = "sboxdb"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "native"]
std = []
native = [
    "dep:rand",
    "dep:config",
    "dep:tokio-stream",
    "dep:clap",
    "dep:uuid",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tokio-serde",
    "dep:rustyline"
]
wasm = ["dep:wasm_sync"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.197", features = ["derive", "std", "rc"] }
serde_bytes = "0.11.14"
bincode = "^1.3.3"
async-trait = "0.1.80"
futures = "0.3"
log = "0.4.21"
env_logger = "0.11.3"
hex = "0.4.3"
regex = "1.10.4"
simplelog = "0.12.2"

rand = { version = "0.8.5", optional = true }
config = { version = "0.14.0", optional = true }
tokio-stream = { version = "0.1.15", features = ["net"], optional = true }
clap = { version = "4.5.47", features = ["cargo", "derive"], optional = true }
uuid = { version = "1.8.0", features = ["v4"], optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = true }
tokio-serde = { version = "0.9.0", features = ["bincode"], optional = true }
tokio-util = { version = "0.7.11", features = ["codec"], optional = true }
rustyline = { version = "17.0.1", optional = true }

wasm_sync = { version = "0.1.2", optional = true }
chrono = "0.4.42"

[dev-dependencies]
paste = "1.0.14"
goldenfile = "1.8.0"

# Make this Cargo.toml also the workspace manifest.
# The root package is implicitly a member; add wasm crate.
[workspace]
members = ["wasm"]
